[package]
name = "chola"
version = "0.1.0"
authors = ["balaji jinnah <rbalajis25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
byteorder = "1.3.2"
fst = "0.3.5"
sled = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-preview = "0.3.0-alpha.17"
log = "0.4"
rmp-serde = "0.14.0"
gotham = "0.4.0"
simplelog = "0.7.1"
hyper = "0.12"
oldfuture = {package="futures" , version="0.1"}
mime = "0.3.14"
cpuprofiler = "0.0.2"
binary-heap-plus = "0.2.0"
fst-levenshtein = "0.2"
rand = "0.7"
tempfile = "3"
rust-stemmers = "1.2.0"
stopwords = "0.1.0"
bytes = "0.4"
tonic = "0.1.0-alpha.6"
prost = "0.5.0"
tokio = "=0.2.0-alpha.6"
retain_mut = "0.1.0"
# Required for wellknown types
prost-types = "0.5"
pest = "2.0"
pest_derive = "2.0"

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"

[build-dependencies]
tonic-build = "0.1.0-alpha.4"