[package]
name = "pathivu"
version = "0.1.0"
authors = ["balaji jinnah <rbalajis25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
byteorder = "1.3.2"
fst = "0.3.5"
sled = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.1"
log = "0.4"
rmp-serde = "0.14.0"
simplelog = "0.7.1"
hyper = "0.12"
mime = "0.3.14"
cpuprofiler = "0.0.2"
binary-heap-plus = "0.2.0"
fst-levenshtein = "0.2"
rand = "0.7"
tempfile = "3"
rust-stemmers = "1.2.0"
stopwords = "0.1.0"
bytes = "0.4"
tonic = "0.1.1"
prost = "0.6"
tokio = " 0.2.6"
retain_mut = "0.1.0"
array_tool = "1.0.3"
# Required for wellknown types
prost-types = "0.5"
pest = "2.0"
pest_derive = "2.0"
simd-json = "0.2.2"
isahc = "0.8.2"
num_cpus = "1.11.1"
whoami = "0.6"
clap = "2"
uuid = "0.8.1"
artillery-core = {git = "https://github.com/bastion-rs/artillery.git", branch = "balaji/payload"}
[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"
[dependencies.gotham]
git = "https://github.com/gotham-rs/gotham.git"
[build-dependencies]
tonic-build = "0.1.1"